Bug 261345 - ipc/restrictedendpoints/deny-access-webPush.html is a flaky crash
Summary: ipc/restrictedendpoints/deny-access-webPush.html is a flaky crash
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Tools / Tests (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-09-08 11:29 PDT by Chris Dumez
Modified: 2023-09-08 22:17 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2023-09-08 11:29:11 PDT
ipc/restrictedendpoints/deny-access-webPush.html is a flaky crash:
```
Thread 0 Crashed::   Dispatch queue: com.apple.main-thread
0   com.apple.WebKit              	       0x12f52383c IPC::Decoder::buffer() const
1   com.apple.WebKit              	       0x131d54c2c WebKit::IPCTestingAPI::jsResultFromReplyDecoder(JSC::JSGlobalObject*, IPC::MessageName, IPC::Decoder&)
2   com.apple.WebKit              	       0x131d6f788 WebKit::IPCTestingAPI::sendMessageWithJSArguments(IPC::Connection&, OpaqueJSContext const*, unsigned long, OpaqueJSValue const* const*, OpaqueJSValue const**)::$_20::operator()(IPC::Decoder*) const
3   com.apple.WebKit              	       0x131d6f654 WTF::Detail::CallableWrapper<WebKit::IPCTestingAPI::sendMessageWithJSArguments(IPC::Connection&, OpaqueJSContext const*, unsigned long, OpaqueJSValue const* const*, OpaqueJSValue const**)::$_20, void, IPC::Decoder*>::call(IPC::Decoder*)
4   com.apple.WebKit              	       0x130d950c4 WTF::Function<void (IPC::Decoder*)>::operator()(IPC::Decoder*) const
5   com.apple.WebKit              	       0x130d7aee4 WTF::CompletionHandler<void (IPC::Decoder*)>::operator()(IPC::Decoder*)
6   com.apple.WebKit              	       0x13264188c IPC::Connection::cancelAsyncReplyHandlers()
7   com.apple.WebKit              	       0x132642a4c IPC::Connection::invalidate()
8   com.apple.WebKit              	       0x131b1c110 WebKit::NetworkProcessConnection::~NetworkProcessConnection()
9   com.apple.WebKit              	       0x131b1c244 WebKit::NetworkProcessConnection::~NetworkProcessConnection()
10  com.apple.WebKit              	       0x131b1c274 WebKit::NetworkProcessConnection::~NetworkProcessConnection()
```
Comment 1 Chris Dumez 2023-09-08 11:29:24 PDT
<rdar://114615232>
Comment 2 Chris Dumez 2023-09-08 11:31:52 PDT
Pull request: https://github.com/WebKit/WebKit/pull/17604
Comment 3 EWS 2023-09-08 22:17:33 PDT
Committed 267823@main (bea4dfe5fc33): <https://commits.webkit.org/267823@main>

Reviewed commits have been landed. Closing PR #17604 and removing active labels.