Cherry-pick bea4dfe5fc33. rdar://114615232

ipc/restrictedendpoints/deny-access-webPush.html is a flaky crash
    https://bugs.webkit.org/show_bug.cgi?id=261345
    rdar://114615232

    Reviewed by Simon Fraser.

    Update IPCTestingAPI's sendMessageWithJSArguments() to deal with the
    fact that IPC sending may fail/abort and the reply decoder may be null
    or invalid. This avoids doing a null deref later on in
    jsResultFromReplyDecoder().

    * Source/WebKit/WebProcess/WebPage/IPCTestingAPI.cpp:
    (WebKit::IPCTestingAPI::sendMessageWithJSArguments):

    Canonical link: https://commits.webkit.org/267823@main

Identifier: 266246.1610@safari-7617-branch